# classic-ellipse-detector

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  baseline_prasad.txt  batch_test.ps1  build.bat  compile_main.bat  enhanced_prasad.txt  eval_result.txt  evaluation_report.txt  evaluation_report_visibility.txt  multi_test.ps1  optimization-methods-plan.md  run_evaluation.ps1  run_prasad_evaluation.ps1  实验配置说明.md
batch_multi_test/: synth_overlap_12ellipses_img1.jpg.fled.txt  synth_overlap_12ellipses_img10.jpg.fled.txt  synth_overlap_12ellipses_img100.jpg.fled.txt  synth_overlap_12ellipses_img11.jpg.fled.txt  synth_overlap_12ellipses_img12.jpg.fled.txt  synth_overlap_12ellipses_img13.jpg.fled.txt  synth_overlap_12ellipses_img14.jpg.fled.txt  synth_overlap_12ellipses_img15.jpg.fled.txt  timing.txt
batch_results/: test_results.txt
batch_results_final/: test_results.txt
batch_synth/: synth_overlap_12ellipses_img1.jpg.fled.txt  synth_overlap_12ellipses_img10.jpg.fled.txt  synth_overlap_12ellipses_img100.jpg.fled.txt  synth_overlap_12ellipses_img11.jpg.fled.txt  synth_overlap_12ellipses_img12.jpg.fled.txt  synth_overlap_12ellipses_img13.jpg.fled.txt  synth_overlap_12ellipses_img14.jpg.fled.txt  synth_overlap_12ellipses_img15.jpg.fled.txt  synth_overlap_12ellipses_img16.jpg.fled.txt  synth_overlap_12ellipses_img17.jpg.fled.txt  synth_overlap_12ellipses_img18.jpg.fled.txt  synth_overlap_12ellipses_img19.jpg.fled.txt  synth_overlap_12ellipses_img2.jpg.fled.txt  synth_overlap_12ellipses_img20.jpg.fled.txt  synth_overlap_12ellipses_img21.jpg.fled.txt  (+586 more)
dl/: data.py  (+12 more)
(+18395 files in other folders)
